small change to html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Star-Wars RPG</h1>
-    <h1>Your character</h1>
+    <h1>Select your character</h1>
     <div class="attackers">
         <div id="obiWan">
             <img src="Assets/images/obiwan.jpg">
